# rust_uniq

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs
tests/expected/: one.txt.stdin.c.out  skip.txt.stdin.c.out  t4.txt.stdin.c.out  t5.txt.c.out  t6.txt.c.out  three.txt.c.out
