[package]
name = "rust_uniq"
version = "0.1.0"
edition = "2021"
description = "Rust uniq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.3"
rand = "0.8.5"
tempfile = "3.3.0"
